--- a/src/content/blog/my-bookshelf.mdx
+++ b/src/content/blog/my-bookshelf.mdx
@@ -25,3 +25,11 @@ title: My Bookshelf
 5. The Forever War (by Joe Haldeman)
 6. How the world Really Works (by Vaclav Smil)
 7. The Handbook of Space Resources
+
+---
+
+# Technical
+
+## Upcoming Reads
+
+## Wishlist
