--- a/src/content/blog/programming-articles-collection.mdx
+++ b/src/content/blog/programming-articles-collection.mdx
@@ -1,9 +1,9 @@
 ---
 heroImage: /src/assets/images/Computer Screen Code Photo.jpg
 category: Programming
-description: Deep knowledge on nuts and bolts of every day programming
+description: My favourite tidbits on nuts and bolts of every day programming
 pubDate: 2024-12-30T18:30:00.000Z
 tags:
   - programming
-title: Collection of my best Programming articles
+title: 'Code Craft: Best Articles'
 ---
