my first ride with fedora

--- a/src/content/blog/my-first-experience-with-fedora.mdx
+++ b/src/content/blog/my-first-experience-with-fedora.mdx
@@ -1,14 +1,24 @@
 ---
-heroImage: /src/assets/images/Fedora Linux.png
+heroImage: /src/assets/images/fedoravspop.jpg
 category: Tech and Tinkerings
 description: It wasn't a pleasant experience
 pubDate: 2024-12-30T18:30:00.000Z
 draft: false
 tags:
+  - Fedora
+  - Pop!_OS
   - linux
 title: 'Fedora and Me: A Beginner’s Tale'
 ---
 
-One day, I got so fed up with windows that I decided to try linux. I mean, I have a huge custom built gaming PC and still windows is not at all snappy on it. Windows runs lot of unnecessary background services which are hard to disable. But I know linux is light weight. So, I went and searched for the most shiny thing in Linux land. After spending a lot of time on choosing the right distro, I landed on Fedora, thanks to its promise of cutting edge features with stability. And spoiler, my experience with it wasn't great. \
+One day, I got so fed up with windows that I decided to try linux. I mean, I have a huge custom built gaming PC and still windows is not at all snappy. Windows runs lot of unnecessary background services which are hard to disable. But I know linux is light weight. So, I went and searched for the most shiny thing in Linux land. After spending a lot of time on choosing the right distro, I landed on Fedora, thanks to its promise of cutting edge features with stability. And spoiler, my experience with it wasn't great. \
 \
-For starters, there are multiple editions of fedora you can pick from. I chose the KDE spin, burned it on to my drive and started the installation. Here comes the first hurdle, the default partition manager shipped by Fedora isn't intuitive. I could tell on my first use because this wasn't my first experience with Linux. I had used Ubuntu several years ago and I remember the partition manager(GParted) to be intuitive and simple.
+For starters, there are multiple editions of fedora you can pick from. I chose the KDE spin, burned it on to my drive and started the installation. Here comes the first hurdle, the default partition manager shipped by Fedora isn't intuitive. I could tell on my first use because this wasn't my first experience with Linux. I had used Ubuntu several years ago and I remember the partition manager, GParted to be intuitive and simple. (Spoiler 2: I switched to another Distro later and found GParted to be user-friendly). Then comes the next Issue\
+ \
+I wonder which dev at Fedora thought it's a good idea to have different keyboard layouts for Lockscreen and Desktop Environment. This has caused me a great deal of frustration. I don't even wish to recall how painful this experience is. But I remember fedora rejecting my password because my keyboard layout changed to GB despite setting the layout as US in installation. Moving on..
+
+In the process of solving the above problem, I faced another issue, yet again. This issue is too frustrating that this was the final nail in the coffin for me. Somehow after I logged in with safe mode, I noticed my keyboard isn't working. Again, I turned to google, fedora forums and stack exchanges. Some people suggested different software like piper, solaar to configure my peripherals. Despite installing all of them, I noticed that my keyboard connected by logitech Unifying Receiver is just not working. After hours of reading, I read somewhere that there is a bug in fedora kernel for the logitech unifying receiver's keyboard driver which prevented my keyboard from working. Adding fuel to the fire, my desktop kept flickering because my Fedora install did not have Nvidia GPU drivers, instead, it just kept running on my Integrated GPU. That's it, I thought. I am done!! \
+\
+Resisting the urge to stay on windows forever, I turned towards debian based distros. I had used linux mint, Ubuntu and peppermint several years ago. They worked fine in the past. So, I researched the best distro based on debian and settled with Pop!\_OS. When I installed Pop, I sighed a great relief seeing my favourite Partition Manager GParted and seeing how everything in Pop just works. I installed my favourite Desktop Environment, KDE plasma on Pop and I am loving this distro. \
+\
+By the way, Pop!\_OS comes with pre-installed Nvidia/AMD drivers so that you can just concentrate on doing stuff instead of setting up your PC.
