currently reading update

--- a/src/content/blog/my-bookshelf.mdx
+++ b/src/content/blog/my-bookshelf.mdx
@@ -9,6 +9,10 @@ tags:
 title: My Bookshelf
 ---
 
+## Currently Reading
+
+1. Deep Work (by Cal Newport)
+
 ## Upcoming Reads
 
 1. Rendezvous with Rama
@@ -18,17 +22,20 @@ title: My Bookshelf
 
 (in no particular order)
 
-1. Deep Work (by Cal Newport)
-2. The Dale Carnegie Omnibus Vol-1
-3. The Martian (by Andy Weir)
-4. Into Thin Air (by Jon Krakauer)
-5. The Forever War (by Joe Haldeman)
-6. How the world Really Works (by Vaclav Smil)
-7. The Handbook of Space Resources
+1. The Dale Carnegie Omnibus Vol-1
+2. The Martian (by Andy Weir)
+3. Into Thin Air (by Jon Krakauer)
+4. The Forever War (by Joe Haldeman)
+5. How the world Really Works (by Vaclav Smil)
+6. The Handbook of Space Resources
 
 ---
 
 # Technical
+
+## Currently Reading
+
+1. Confident Ruby (by Avdi Grimm)
 
 ## Upcoming Reads
 
