asking for help.mdx

--- a/src/content/blog/my-bookshelf.mdx
+++ b/src/content/blog/my-bookshelf.mdx
@@ -12,6 +12,7 @@ title: My Bookshelf
 ## Currently Reading
 
 1. Deep Work (by Cal Newport)
+2. The Martian (by Andy Weir)
 
 ## Upcoming Reads
 
@@ -23,11 +24,10 @@ title: My Bookshelf
 (in no particular order)
 
 1. The Dale Carnegie Omnibus Vol-1
-2. The Martian (by Andy Weir)
-3. Into Thin Air (by Jon Krakauer)
-4. The Forever War (by Joe Haldeman)
-5. How the world Really Works (by Vaclav Smil)
-6. The Handbook of Space Resources
+2. Into Thin Air (by Jon Krakauer)
+3. The Forever War (by Joe Haldeman)
+4. How the world Really Works (by Vaclav Smil)
+5. The Handbook of Space Resources
 
 ---
 
@@ -36,6 +36,7 @@ title: My Bookshelf
 ## Currently Reading
 
 1. Confident Ruby (by Avdi Grimm)
+2. Practical Object-Oriented Design in Ruby by Sandi Metz
 
 ## Upcoming Reads
 
