--- a/src/content/blog/inter-thread-communication-and-javascript.mdx
+++ b/src/content/blog/inter-thread-communication-and-javascript.mdx
@@ -130,7 +130,8 @@ No, that's incorrect. <u>**Host APIs do NOT have different JavaScript interprete
   	**Web APIs (like `setTimeout`, `Workspace`, DOM manipulation) in browsers, and core modules in
   	Node.js (like `fs`, `http`), are predominantly implemented in low-level languages such as C or
   	C++.**
-  </u> This is done for:
+  </u>
+  This is done for:
 - <u>**Performance:**</u> To execute these I/O-bound or computationally intensive tasks as fast as possible.
 - <u>**Access to System Resources:**</u> To directly interact with the operating system for things like
   network sockets, file I/O, or hardware.
