--- a/src/content/blog/Asking-for-help-is-an-underrated-Programming-skill--.mdx
+++ b/src/content/blog/Asking-for-help-is-an-underrated-Programming-skill--.mdx
@@ -1,11 +1,11 @@
 ---
 heroImage: /src/assets/images/Illustration Help Signs Jan 8.webp
 category: Programming
-description: A skill I realised that I lack
+description: .
 pubDate: 2025-01-07T18:30:00.000Z
 tags:
   - productivity
 title: 'Asking for help is an underrated Programming skill  '
 ---
 
-If you are stuck on something for more than a day, just ask your coworkers.
+If you are stuck on something for more than sometime, just ask your coworkers.
